# KroozPackageManager

./: .gitignore  Readme.md  pyproject.toml
PackageManager/: Inspector.py  Manager.py  admin.py  cli.py  env.py
